stream 修改了groupBy 逻辑